[package]
name = "shader-translator"
description = "Tiny program to read glsl from stdin, and write spir-v to stdout"
version = "0.4.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/shader-translator"
repository = "https://github.com/gridbugs/shader-translator"

[dependencies]
shaderc = "0.7"
meap = "0.4"
env_logger = "0.8"
